--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "next": "14.2.5",
     "re-chart": "^1.0.0",
     "react": "^18",
     "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "recharts": "^3.0.2"
   },
